changes to tokens